--- a/.github/workflows/main_itsupportchatbotjenny.yml
+++ b/.github/workflows/main_itsupportchatbotjenny.yml
@@ -23,6 +23,13 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Create .env file from GitHub secrets
+        run: |
+          "VITE_AZURE_OPENAI_KEY=${{ secrets.VITE_AZURE_OPENAI_KEY }}" | Out-File -FilePath .env -Encoding utf8 -Append
+          "VITE_AZURE_OPENAI_ENDPOINT=${{ secrets.VITE_AZURE_OPENAI_ENDPOINT }}" | Out-File -FilePath .env -Encoding utf8 -Append
+          "VITE_AZURE_OPENAI_DEPLOYMENT=${{ secrets.VITE_AZURE_OPENAI_DEPLOYMENT }}" | Out-File -FilePath .env -Encoding utf8 -Append
+          "VITE_AZURE_OPENAI_API_VERSION=${{ secrets.VITE_AZURE_OPENAI_API_VERSION }}" | Out-File -FilePath .env -Encoding utf8 -Append
+          
       - name: npm install, build, and test
         run: |
           npm install
