--- a/.github/workflows/main_itsupportchatbotjenny.yml
+++ b/.github/workflows/main_itsupportchatbotjenny.yml
@@ -30,21 +30,20 @@ jobs:
           echo "VITE_AZURE_OPENAI_DEPLOYMENT=${{ secrets.VITE_AZURE_OPENAI_DEPLOYMENT }}" >> .env
           echo "VITE_AZURE_OPENAI_API_VERSION=${{ secrets.VITE_AZURE_OPENAI_API_VERSION }}" >> .env
           
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Upload build artifact (dist folder)
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: build
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: dist
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -54,7 +53,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: build
+          path: dist
       
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -62,5 +61,5 @@ jobs:
         with:
           app-name: 'ITSupportChatBotJenny'
           slot-name: 'Production'
-          package: build
+          package: dist
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_39CA34D2884F421E95EEBBCA90D0843D }}
