--- a/.github/workflows/main_itsupportchatbotjenny.yml
+++ b/.github/workflows/main_itsupportchatbotjenny.yml
@@ -34,6 +34,15 @@ jobs:
         run: |
           npm install
           npm run build --if-present
+          
+      - name: Show build output
+        run: |
+          echo "Root dir:"
+          ls -al
+          echo "dist contents:"
+          ls -al dist || echo "dist does not exist"
+          echo "build contents:"
+          ls -al build || echo "build does not exist"
 
       - name: Upload build artifact (dist folder)
         uses: actions/upload-artifact@v4
