--- a/.github/workflows/main_itsupportchatbotjenny.yml
+++ b/.github/workflows/main_itsupportchatbotjenny.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -23,23 +23,20 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Create .env file from GitHub secrets
-        run: |
-          echo "VITE_AZURE_OPENAI_KEY=${{ secrets.VITE_AZURE_OPENAI_KEY }}" >> .env
-          echo "VITE_AZURE_OPENAI_ENDPOINT=${{ secrets.VITE_AZURE_OPENAI_ENDPOINT }}" >> .env
-          echo "VITE_AZURE_OPENAI_DEPLOYMENT=${{ secrets.VITE_AZURE_OPENAI_DEPLOYMENT }}" >> .env
-          echo "VITE_AZURE_OPENAI_API_VERSION=${{ secrets.VITE_AZURE_OPENAI_API_VERSION }}" >> .env
-          
-      - name: npm install, build
-        run: |
-          npm install
-          npm run build --if-present
-  
-      - name: Upload build artifact (dist folder)
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build Vite frontend
+        run: npm run build
+
+      - name: Zip artifact for deployment
+        run: zip -r release.zip . -x ".git/*" "node_modules/*"
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: dist
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,19 +44,24 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: dist
-      
-      - name: 'Deploy to Azure Web App'
+
+      - name: Unzip artifact
+        run: unzip release.zip
+
+      - name: Install server dependencies
+        run: npm install --omit=dev
+
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'ITSupportChatBotJenny'
           slot-name: 'Production'
-          package: dist
+          package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_39CA34D2884F421E95EEBBCA90D0843D }}
