--- a/.github/workflows/main_jennylinuxchatbottest.yml
+++ b/.github/workflows/main_jennylinuxchatbottest.yml
@@ -3,6 +3,8 @@
 
 name: Build and deploy Node.js app to Azure Web App - JennyLinuxChatBotTest
 
+name: Build and deploy Node.js app to Azure Web App - JennyLinuxChatBotTest
+
 on:
   push:
     branches:
@@ -28,7 +30,6 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
