--- a/.github/workflows/main_jennylinuxchatbottest.yml
+++ b/.github/workflows/main_jennylinuxchatbottest.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read \
 
     steps:
       - uses: actions/checkout@v4
@@ -28,7 +28,6 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
