--- a/.github/workflows/main_jennylinuxchatbottest.yml
+++ b/.github/workflows/main_jennylinuxchatbottest.yml
@@ -23,21 +23,16 @@ jobs:
         with:
           node-version: '20.x'
 
-      # Install root dependencies (Express)
       - name: Install backend dependencies
         run: npm install
 
-      # Build Vite frontend
       - name: Build Vite frontend
-        run: npm run build    # assumes: "build": "cd client && npm install && npm run build"
-
-      # Optional: test step if you have tests
-      # - name: Run tests
-      #   run: npm run test --if-present
+        run: npm run build  
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "*.git*" "node_modules/*"
-
+        run: |
+          zip -r release.zip . -x ".git/*" "node_modules/*"
+          
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -67,4 +62,4 @@ jobs:
           app-name: 'JennyLinuxChatBotTest'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_65E67DFE86744EA0B67B40093334F63D }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_18B865C0A02A43278538923512555B6C }}
