--- a/.github/workflows/main_jennylinuxchatbottest.yml
+++ b/.github/workflows/main_jennylinuxchatbottest.yml
@@ -13,27 +13,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
 
-      - name: Install backend dependencies
-        run: npm install
-
-      - name: Build Vite frontend
-        run: npm run build  
-
-      - name: Zip artifact for deployment
+      - name: npm install, build, and test
         run: |
-          zip -r release.zip . -x ".git/*" "node_modules/*"
-          
-      - name: Upload artifact
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+
+      - name: Zip build output
+        run: zip -r release.zip dist
+
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
@@ -45,14 +44,14 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+    
     steps:
-      - name: Download artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
-      - name: Unzip artifact
+      - name: Unzip artifact for deployment
         run: unzip release.zip
       
       - name: 'Deploy to Azure Web App'
@@ -61,5 +60,5 @@ jobs:
         with:
           app-name: 'JennyLinuxChatBotTest'
           slot-name: 'Production'
-          package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_18B865C0A02A43278538923512555B6C }}
+          package: dist
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_65E67DFE86744EA0B67B40093334F63D }}
