--- a/.github/workflows/main_jennylinuxchatbottest.yml
+++ b/.github/workflows/main_jennylinuxchatbottest.yml
@@ -22,15 +22,18 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-
-      - name: npm install, build, and test
+          
+      - name: Build frontend and prepare server
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
 
-      - name: Zip build output
-        run: zip -r release.zip dist
+          mkdir deploy
+          cp -r dist deploy/
+          cp server.js package.json package-lock.json deploy/
+
+      - name: Zip build + server files
+        run: cd deploy && zip -r ../release.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -60,5 +63,5 @@ jobs:
         with:
           app-name: 'JennyLinuxChatBotTest'
           slot-name: 'Production'
-          package: dist
+          package: release.zip
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_65E67DFE86744EA0B67B40093334F63D }}
