Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_jennylinuxchatbottest.yml
+++ b/.github/workflows/main_jennylinuxchatbottest.yml
@@ -22,19 +22,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-          
-      - name: Build frontend and prepare server
+
+      - name: npm install, build, and test
         run: |
           npm install
-          npm run build
+          npm run build --if-present
+          npm run test --if-present
 
-          mkdir deploy
-          cp -r dist deploy/
-          cp server.js package.json package-lock.json deploy/
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
-      - name: Zip build + server files
-        run: zip -r release.zip deploy/*
-          
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -63,5 +60,5 @@ jobs:
         with:
           app-name: 'JennyLinuxChatBotTest'
           slot-name: 'Production'
-          package: release.zip
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_65E67DFE86744EA0B67B40093334F63D }}
+          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AF2468BA86674A10BD0259311780579B }}
