--- a/.github/workflows/main_itsupportchatbotjenny.yml
+++ b/.github/workflows/main_itsupportchatbotjenny.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read 
 
     steps:
       - uses: actions/checkout@v4
@@ -26,13 +26,13 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build Vite frontend
-        run: npm run build
-
-      - name: Zip artifact for deployment
-        run: zip -r release.zip . -x ".git/*" "node_modules/*"
-
-      - name: Upload artifact
+      - name: npm install, build
+        run: npm run build --if-present
+        
+      - name: Zip project for deployment (excluding git & node_modules)
+        run: zip -r release.zip . -x "*.git*" "node_modules/*"
+  
+      - name: Upload build artifact (dist folder)
         uses: actions/upload-artifact@v4
         with:
           name: node-app
@@ -44,9 +44,9 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+    
     steps:
-      - name: Download artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
@@ -54,10 +54,7 @@ jobs:
       - name: Unzip artifact
         run: unzip release.zip
 
-      - name: Install server dependencies
-        run: npm install --omit=dev
-
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
