--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/identity": "latest",
     "express": "^4.21.2",
+    "linkify-string": "^4.3.1",
     "openai": "latest",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
